@@ -23,7 +23,11 @@ CONFFLAGS = \
 	--disable-myhostname \
 	--disable-vconsole \
 	--disable-microhttpd \
-	--disable-silent-rules
+	--disable-silent-rules \
+	--with-ntp-servers="0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org"  \
+	--with-system-uid-max=999 \
+	--with-system-gid-max=999
+
 ifeq (,$(findstring stage1,$(DEB_BUILD_PROFILES)))
 CONFFLAGS += --enable-libcryptsetup
 endif
